# misraj-python

./: LICENSE  README.md  pyproject.toml
src/misraj/: __init__.py  client.py  types.py
src/misraj/configs/: constant.py
src/misraj/services/: __init__.py  base.py  embeddings.py  ocr.py
src/misraj/types/: embedding.py  ocr.py
src/misraj/utils/: logging.py  pdf.py
