[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kawn.ai"
version = "0.1.1"
authors = [
  { name="Khalil Hennara", email="hennara@misraj.ai" },
]
description = "The official Python SDK for the kawn AI API"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "PyMuPDF>=1.23.0",
    "colorama",
]

[project.urls]
Homepage = "https://kawn.ai/en"
Source = "https://github.com/misraj-ai/kawn-python"
